http-pub/css/webapp.css
/* ... */
#account-bar form#create input[type="submit"]:active,
#account-bar form#create input[type="submit"].pressed {
    background-image: url(/images/newsite/create_pressed.png);
    -one-image-postprocess: pngquant(64) pngcrush(-rem alla) optipng;
}

#account-bar .close {
    position: absolute;
    right: 10px;
    
    width: 20px;
    height: 20px;
    background-color: white;
    color: rgb(120,154,179);
    cursor: pointer;
    
    font-weight: bold;
    border-radius: 10px;
    border-color: rgb(120,154,179);
    border-width: 2px;
    border-style: solid;
}

#account-bar .authbar {
    display: none;
}

#account-bar .error {
    display: none;
    margin-left: 15px;
    margin-right: 15px;
    margin-top: 5px;
    background-color: rgb(189,64,49);
    color: white;
    font-weight: bold;
    padding: 10px;
    border-radius: 15px;
}

#account-bar .notify {
    display: none;
    background-color: rgb(220,200,30);
    color: black;
    margin-top: 1em;
    padding-top: 1em;
    padding-bottom: 1em;
}

#top {
    margin: auto;
    padding-top: 10px;
    padding-bottom: 0px;
    text-align: center;
}

#top .logo {
    cursor: pointer;
}

#top .hook {
    font-size: 32px;
    color: rgb(40,50,90);
}

.browser-form {
    margin: auto;
    margin-bottom: 10px;
    
    text-align: center;
    width: 570px;
    height: 344px;
    padding: 15px;
}

.browser-form .uri {
    width: 535px;
    height: 54px;
    padding-left: 15px;
    font-size: 20px;
    border-width: 0px;
    background-image: url(/images/newsite/uri.png);
    -one-image-postprocess: pngquant(16) pngcrush(-rem alla) optipng;
    background-color: transparent;
    color: black;
    margin-bottom: 5px;
}

.browser-form.busy .uri {
    background-image: url(/images/newsite/uri_busy.gif);
}

.browser-form .run {
    cursor: pointer;
    width: 200px;
    height: 51px;
    
    background-image: url(/images/newsite/run.png);
    -one-image-postprocess: pngquant(64) pngcrush(-rem alla) optipng;
    background-color: transparent;
    
    border-width: 0px;
    border-radius: 10px;
}

.browser-form .run.pressed {
    background-image: url(/images/newsite/run_pressed.png);
    -one-image-postprocess: pngquant(64) pngcrush(-rem alla) optipng;
}

.browser-form .run-bar {
    margin-top: -10px;
    position: relative;
    top: 0px;
    left: 0px;
}

.browser-form .run-bar div {
    display: inline-block;
    position: absolute;
    right: 20px;
    height: 41px;
    font-size: 32px;
}

.browser-form .run-bar div a:visited,
.browser-form .run-bar div a:link {
    color: rgb(240,248,252);
}

.browser-form .versions {
    margin: auto;
    width: 575px;
    height: 125px;
    padding-top: 10px;
    overflow-y: auto;
    margin-top: -5px;
    margin-bottom: 15px;
    text-align: center;
    
    background-image: url(/images/newsite/version_box.png);
    -one-image-postprocess: pngquant(8) pngcrush(-rem alla) optipng;
    background-repeat: no-repeat;
    background-position: center;
}

.browser-form .versions .version {
    text-align: center;
    cursor: pointer;
    background-color: transparent;
    color: white;
    background-image: url(/images/newsite/version_button.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
    background-repeat: no-repeat;
    background-position: center center;
    width: 70px;
    height: 30px;
    font-family: Ubuntu, Helvetica, sans-serif;
    font-size: 20px;
    
    border-width: 0px;
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 5px;
}

.browser-form .versions .version.excluded {
    background-image: url(/images/newsite/version_button_disabled.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
}

.browser-form .versions .unlock-message {
    width: 450px;
    margin: auto;
    background-color: rgb(210,200,230);
    border-radius: 15px;
    padding: 15px;
}

.browser-form .versions .version.active {
    background-image: url(/images/newsite/version_button_active.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
    color: black;
}

.browsers {
    margin-bottom: 10px;
}

.browsers .browser {
    cursor: pointer;
    display: inline-block;
    width: 90px;
    height: 90px;
    text-align: center;
    background-color: transparent;
    background-image: url(/images/newsite/browser_button.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
}

.browsers .browser.active {
    background-image: url(/images/newsite/browser_button_active.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
}

.browsers .browser input {
    cursor: pointer;
    border-width: 0px;
    width: 90px;
    height: 90px;
    background-color: transparent;
    background-position: center center;
    background-repeat: no-repeat;
}

.browsers .browser .explorer {
    background-image: url(/images/newsite/explorer.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
}

.browsers .browser .firefox {
    background-image: url(/images/newsite/firefox.png);
    -one-image-postprocess: pngquant(128) pngcrush(-rem alla) optipng;
}

.browsers .browser .chrome {
    background-image: url(/images/newsite/chrome.png);
    -one-image-postprocess: pngquant(128) pngcrush(-rem alla) optipng;
}

.browsers .browser .safari {
    background-image: url(/images/newsite/safari.png);
    -one-image-postprocess: pngquant(128) pngcrush(-rem alla) optipng;
}

.browsers .browser .opera {
    background-image: url(/images/newsite/opera.png);
    -one-image-postprocess: pngquant(64) pngcrush(-rem alla) optipng;
}

.topic {
    width: 700px;
    height: 250px;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 10px;
    background-color: transparent;
    background-image: url(/images/newsite/topic_box.png);
    -one-image-postprocess: pngquant(32) pngcrush(-rem alla) optipng;
    -one-image-inline: true;
    background-size: 100% 100%;
    padding: 20px;
    
    display: table;
}
/* ... */

